fixing style contrast ratio

--- a/Praktikum_18/my-app/src/components/layouts/navbar/navbar.module.scss
+++ b/Praktikum_18/my-app/src/components/layouts/navbar/navbar.module.scss
@@ -78,12 +78,12 @@
 
 /* Sign Out */
 .navbar__button--danger {
-  background-color: #ef4444;
+  background-color: #C62828;
   color: white;
 }
 
 .navbar__button--danger:hover {
-  background-color: #dc2626;
+  background-color: #B71C1C;
   transform: translateY(-2px);
 }
 
