--- a/Praktikum_18/my-app/src/views/produk/produk.module.scss
+++ b/Praktikum_18/my-app/src/views/produk/produk.module.scss
@@ -86,7 +86,7 @@
 
     &__price {
       font-size: 16px;
-      color: #ff5722;
+      color: #A02D0C;
       font-weight: bold;
     }
 
